--- a/app/build.gradle
+++ b/app/build.gradle
@@ -244,7 +244,11 @@ dependencies {
         annotationProcessor 'jakarta.xml.bind:jakarta.xml.bind-api:2.3.3'
         annotationProcessor 'org.glassfish.jaxb:jaxb-runtime:2.3.5'
     }
-
+    implementation 'com.android.databinding:adapters:3.1.4'
+    //noinspection GradleDependency
+    implementation 'com.android.databinding:library:3.1.4'
+    //noinspection GradleDependency
+    implementation 'com.android.databinding:baseLibrary:3.1.4'
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support:design:26.1.0'
     implementation 'com.android.support:support-v13:26.1.0'
@@ -281,6 +285,8 @@ dependencies {
     implementation 'com.getpebble:pebblekit:3.1.0'
     implementation 'com.github.jamorham:amazfitcommunication:master-SNAPSHOT'
     implementation 'io.reactivex:rxjava:1.3.3'
+    //implementation 'com.activeandroid:thread-safe-active-android:3.1.1'
+    //implementation 'com.github.lecho:hellocharts-android:v1.5.8'
     implementation "com.polidea.rxandroidble2:rxandroidble:1.12.1"
     implementation 'com.google.guava:guava:24.1-android'
     implementation 'com.embarkmobile:zxing-android-minimal:2.0.0@aar'
